Kubernetes. Basics, Usage, and Administration/kuber-homeworks-2.3/deployment-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  #namespaces: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web-content
        configMap:
          name: nginx-webpage-tls
