Kubernetes. Basics, Usage, and Administration/kuber-homeworks-2.3/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
  #namespaces: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content
          mountPath: /usr/share/nginx/html
      - name: network-multitool
        image: wbitt/network-multitool
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1180
          name: http-port
        - containerPort: 11443
          name: https-port
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
        securityContext:
          runAsUser: 0
          capabilities:
            add: ["NET_ADMIN"]
      volumes:
      - name: web-content
        configMap:
          name: nginx-webpage
