Kubernetes. Basics, Usage, and Administration/kuber-homeworks-2.3/service-nginx-tls.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-tls
spec:
  selector:
    app: nginx
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
