Kubernetes. Basics, Usage, and Administration/kuber-homeworks-2.3/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-multitool
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080 # Номер порта для сервиса NodePort должен быть в диапазоне 30000–32767
  type: NodePort
