Kubernetes. Basics, Usage, and Administration/kuber-homeworks-2.3/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.130.193.39.202.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-nginx-tls
            port:
              number: 80
  tls:
  - hosts:
    - app.130.193.39.202.nip.io
    secretName: secret-nginx-tls
